kustomize/overlays/prod/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spms-deployment
  labels:
    app: spms-prod
spec:
  selector:
    matchLabels:
      app: spms-prod
  template:
    metadata:
      labels:
        app: spms-prod
    spec:
      containers:
        - name: spms-backend
          image: ghcr.io/dbca-wa/science-projects-service:3.1.11
          volumeMounts:
            - mountPath: /usr/src/app/backend/files
              name: spms-media-prod
        - name: spms-frontend
          image: ghcr.io/dbca-wa/science-projects-client:3.1.11
      volumes:
        - name: spms-media-prod
          persistentVolumeClaim:
            claimName: spms-media-data-prod
