kustomize/overlays/prod/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: spms-clusterip
spec:
  type: ClusterIP
  selector:
    app: spms-prod
    variant: prod
