kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spms-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: scienceprojects.dbca.wa.gov.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spms-clusterip-prod
            port:
              number: 3000
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: spms-clusterip-prod
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: spms-clusterip-prod
            port:
              number: 8000
      - path: /files
        pathType: Prefix
        backend:
          service:
            name: spms-clusterip-prod
            port:
              number: 8000
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: spms-clusterip-prod
            port:
              number: 8000
  - host: profiles.dbca.wa.gov.au
    http:
      paths:
      - path: /staff
        pathType: Prefix
        backend:
          service:
            name: spms-clusterip-prod
            port:
              number: 3000
